@@ -1,3 +1,11 @@
+2006-05-16  Christian Stimming <stimming@tuhh.de>
+
+	* lib/libqof/qof/gnc-date.c (timespecCanonicalDayTime)
+	(qof_print_date_buff, dateSeparator, gnc_timespec_last_mday)
+	(gnc_timespec2dmy): Use localtime_r only when HAVE_LOCALTIME_R is
+	defined. Might be undefined on some weird systems out there,
+	e.g. windows/mingw32.
+
 2006-05-15  Derek Atkins  <derek@ihtfp.com>
 
 	* src/import-export/test/Makefile.am:
